# backend/api/server/agntcy/identity/platform/v1alpha1/app.pb.go
@@ -9,12 +9,11 @@
 package identity_platform_sdk_go
 
 import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	reflect "reflect"
 	sync "sync"
 	unsafe "unsafe"
-
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 )
 
 const (
@@ -91,12 +90,10 @@ type App struct {
 	// A human-readable description for the App.
 	Description *string `protobuf:"bytes,3,opt,name=description,proto3,oneof" json:"description,omitempty"`
 	// The type of the App.
-	Type *AppType `protobuf:"varint,4,opt,name=type,proto3,enum=agntcy.identity.platform.v1alpha1.AppType,oneof" json:"type,omitempty"`
-	// The DID value
-	ResolverMetadataId *string `protobuf:"bytes,5,opt,name=resolver_metadata_id,json=resolverMetadataId,proto3,oneof" json:"resolver_metadata_id,omitempty"`
-	ApiKey             *string `protobuf:"bytes,6,opt,name=api_key,json=apiKey,proto3,oneof" json:"api_key,omitempty"`
-	unknownFields      protoimpl.UnknownFields
-	sizeCache          protoimpl.SizeCache
+	Type          *AppType `protobuf:"varint,4,opt,name=type,proto3,enum=agntcy.identity.platform.v1alpha1.AppType,oneof" json:"type,omitempty"`
+	ApiKey        *string  `protobuf:"bytes,5,opt,name=api_key,json=apiKey,proto3,oneof" json:"api_key,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *App) Reset() {
@@ -157,13 +154,6 @@ func (x *App) GetType() AppType {
 	return AppType_APP_TYPE_UNSPECIFIED
 }
 
-func (x *App) GetResolverMetadataId() string {
-	if x != nil && x.ResolverMetadataId != nil {
-		return *x.ResolverMetadataId
-	}
-	return ""
-}
-
 func (x *App) GetApiKey() string {
 	if x != nil && x.ApiKey != nil {
 		return *x.ApiKey
@@ -175,19 +165,17 @@ var File_agntcy_identity_platform_v1alpha1_app_proto protoreflect.FileDescriptor
 
 const file_agntcy_identity_platform_v1alpha1_app_proto_rawDesc = "" +
 	"\n" +
-	"+agntcy/identity/platform/v1alpha1/app.proto\x12!agntcy.identity.platform.v1alpha1\"\xc2\x02\n" +
+	"+agntcy/identity/platform/v1alpha1/app.proto\x12!agntcy.identity.platform.v1alpha1\"\xf2\x01\n" +
 	"\x03App\x12\x13\n" +
 	"\x02id\x18\x01 \x01(\tH\x00R\x02id\x88\x01\x01\x12\x17\n" +
 	"\x04name\x18\x02 \x01(\tH\x01R\x04name\x88\x01\x01\x12%\n" +
 	"\vdescription\x18\x03 \x01(\tH\x02R\vdescription\x88\x01\x01\x12C\n" +
-	"\x04type\x18\x04 \x01(\x0e2*.agntcy.identity.platform.v1alpha1.AppTypeH\x03R\x04type\x88\x01\x01\x125\n" +
-	"\x14resolver_metadata_id\x18\x05 \x01(\tH\x04R\x12resolverMetadataId\x88\x01\x01\x12\x1c\n" +
-	"\aapi_key\x18\x06 \x01(\tH\x05R\x06apiKey\x88\x01\x01B\x05\n" +
+	"\x04type\x18\x04 \x01(\x0e2*.agntcy.identity.platform.v1alpha1.AppTypeH\x03R\x04type\x88\x01\x01\x12\x1c\n" +
+	"\aapi_key\x18\x05 \x01(\tH\x04R\x06apiKey\x88\x01\x01B\x05\n" +
 	"\x03_idB\a\n" +
 	"\x05_nameB\x0e\n" +
 	"\f_descriptionB\a\n" +
-	"\x05_typeB\x17\n" +
-	"\x15_resolver_metadata_idB\n" +
+	"\x05_typeB\n" +
 	"\n" +
 	"\b_api_key*m\n" +
 	"\aAppType\x12\x18\n" +
