# backend/api/spec/static/api/openapi/platform/v1alpha1/openapi.yaml
@@ -1,6 +1,3 @@
-# Copyright 2025 Copyright AGNTCY Contributors (https://github.com/agntcy)
-# SPDX-License-Identifier: Apache-2.0
-
 # Generated with protoc-gen-openapi
 # https://github.com/google/gnostic/tree/master/cmd/protoc-gen-openapi
 
@@ -793,9 +790,6 @@ components:
                     type: string
                     description: The type of the App.
                     format: enum
-                resolverMetadataId:
-                    type: string
-                    description: The DID value
                 apiKey:
                     type: string
             description: Identity Platform App.
@@ -1116,6 +1110,9 @@ components:
                 name:
                     type: string
                     description: A human-readable name for the Task.
+                description:
+                    type: string
+                    description: A human-readable description for the Task.
                 appId:
                     type: string
                     description: An application ID for the Task.
